k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robotframework-dashboard
  labels:
    name: robotframework-dashboard
---
